# venpo

./: README.md  pyproject.toml
data/: user_agents.json
tests/: test_venpo.py
venpo/: cli.py  main.py
