[tool.poetry]
name = "venpo"
version = "0.1.0"
description = ""
authors = ["Marc Ford <mrfxyz567@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
ipython = "^7.17.0"

[tool.poetry.scripts]
venpo = "venpo.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
